Redmine 10998: Web service mobile, change insertExpenseLine to insertOrUpdateExpenseLine which take "id" in parameter when it is for update expense line, + change new Long to Long.valueOf